# NLP100

./: .env  README.md  git.sh  hello.txt  pyproject.toml  test
chap01/: ans.ipynb  ans00.py  ans01.py  ans02.py  ans03.py  ans04.py  ans05.py  ans06.py  ans07.py  ans08.py  ans09.py
chap02/: ans.ipynb  ans10.py  ans10.sh  ans11.py  ans11.sh  ans11_1.sh  ans11_2.sh  ans11_3.sh  ans12.py  ans12.sh  ans13.py  ans13.sh  ans14.py  ans14.sh  ans15.py  ans15.sh  ans16.py  ans16.sh  ans17.py  ans17.sh  ans18.py  ans18.sh  ans19.py  ans19.sh
chap03/: ans.ipynb  ans20.py  ans21.py  ans22.py  ans23.py  ans24.py  ans25.py  ans26.py  ans27.py  ans28.py  ans29.py  正規表現.pptx
chap04/: 31.py  32.py  33.py  34.py  35.py  36.py  37.py  ans.ipynb  ans30.py  ans31.py  ans32.py  ans33.py  ans34.py  ans35.py  ans36.py  mecab_install.md  nlp100chap04.py  pre.py  result.txt
chap05/: ans.ipynb  ans45.sh
chap06/: ans.ipynb
chap07/: ans.ipynb
chap08/: ans.ipynb
chap09/: ans.ipynb
chap10/: ans.ipynb
