[tool.poetry]
name = "nlp100"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
jupyterlab = "^4.1.5"
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
mecab-python3 = "^1.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
