[tool.poetry]
name = "nlp100"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
pandas = "^2.2.1"
matplotlib = "^3.8.3"
jupyterlab = "^4.1.5"
black = "^24.3.0"
flake8 = "^7.0.0"
mypy = "^1.9.0"
mecab-python3 = "^1.0.8"
pydot = "^2.0.0"
pydot-ng = "^2.0.0"
graphviz = "^0.20.2"
pyparsing = "^3.1.2"
scikit-learn = "^1.4.1.post1"
gensim = "^4.3.2"
tqdm = "^4.66.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
